--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
     <!-- Home Section  -->
     <section id="home">
       <div class="title-group">
-        <h1>Custom Title Here</h1>
+        <h1>Dark/Light Mode Theme Switcher</h1>
         <h2>Welcome to the Website!</h2>
       </div>
     </section>
     <!-- About Section -->
     <section id="about">
-      <h1>Undraw Illustrations</h1>
+      <h1>Some Undraw Illustrations</h1>
       <div class="about-container">
         <div class="image-container">
           <h2>Web Innovation</h2>
@@ -71,7 +71,7 @@
     </section>
     <!-- Projects Section -->
     <section id="projects">
-      <h1>Buttons</h1>
+      <h1>A Nice Buttons</h1>
       <div class="buttons">
         <button class="primary">Primary</button>
         <button class="secondary">Secondary</button>
@@ -96,12 +96,24 @@
     <section id="contact">
       <h1>Contact Us</h1>
       <div class="social-icon">
-        <i class="fab fa-github"></i>
-        <i class="fab fa-codepen"></i>
-        <i class="fab fa-linkedin-in"></i>
-        <i class="fab fa-dribbble"></i>
-        <i class="fab fa-instagram"></i>
-        <i class="fab fa-youtube"></i>
+        <a class="social-link" href="https://github.com/NesyElimelech"
+          ><i class="fab fa-github"></i
+        ></a>
+        <a class="social-link" href="https://www.codepen.io/"
+          ><i class="fab fa-codepen"></i
+        ></a>
+        <a class="social-link" href="https://www.linkedin.com/in/nesy-elimelech"
+          ><i class="fab fa-linkedin-in"></i
+        ></a>
+        <a class="social-link" href="https://www.dribbble.com"
+          ><i class="fab fa-dribbble"></i
+        ></a>
+        <a class="social-link" href="https://www.instagram.com/nesye30/"
+          ><i class="fab fa-instagram"></i
+        ></a>
+        <a class="social-link" href="https://www.youtube.com/"
+          ><i class="fab fa-youtube"></i
+        ></a>
       </div>
     </section>
     <!--  Script -->
